Layout section pages

--- a/src/scss/_apex_typography.scss
+++ b/src/scss/_apex_typography.scss
@@ -1,24 +1,24 @@
-.title-h1>.ab-region-title {
+.title-h1 .ab-region-title {
     @extend .h1;
 }
 
-.title-h2>.ab-region-title {
+.title-h2 .ab-region-title {
     @extend .h2;
 }
 
-.title-h3>.ab-region-title {
+.title-h3 .ab-region-title {
     @extend .h3;
 }
 
-.title-h4>.ab-region-title {
+.title-h4 .ab-region-title {
     @extend .h4;
 }
 
-.title-h5>.ab-region-title {
+.title-h5 .ab-region-title {
     @extend .h5;
 }
 
-.title-h6>.ab-region-title {
+.title-h6 .ab-region-title {
     @extend .h6;
 }
 
@@ -27,5 +27,5 @@
 }
 
 .blockquote.hide-blockquote-footer .blockquote-footer {
-    display: none!important;
+    @include hide();
 }
