General project update

--- a/src/scss/_apex_general.scss
+++ b/src/scss/_apex_general.scss
@@ -6,7 +6,7 @@ body.ab-navbar-fixed-top {
     padding-top: 4rem;
 }
 
-.ab-region.ab-region-title-hidden .ab-region-title {
+.ab-region-title-hidden .ab-region-title {
     @extend .hidden-xs-up;
 }
 
