--- a/src/scss/_apex.scss
+++ b/src/scss/_apex.scss
@@ -1,8 +1,11 @@
 // Custom APEX Sass
 @import "apex_general";
+@import "apex_grid";
 @import "apex_buttons";
 @import "apex_cards";
+@import "apex_images";
 @import "apex_footer";
 @import "apex_jumbotron";
 @import "apex_nav";
+@import "apex_tables";
 @import "apex_typography";
