--- a/apex/templates/Regions/Card.hbs
+++ b/apex/templates/Regions/Card.hbs
@@ -1,5 +1,5 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="card #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
+<div id="#REGION_STATIC_ID#" class="ab-region card #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
     <div class="card-block">
         <h4 class="card-title">#TITLE#</h4>
         <blockquote class="card-text">
