--- a/apex/templates/Fields/Standard.hbs
+++ b/apex/templates/Fields/Standard.hbs
@@ -2,16 +2,14 @@
 <div class="form-group #ITEM_CSS_CLASSES#">
 {{/before_label_and_item}}
     {{#before_label}}
-    <label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#">
+    <label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#" data-help="#HELP_TEMPLATE#">
     {{/before_label}}
     {{#after_label}}
     </label>
     {{/after_label}}
-    {{#before_item}}
-    {{/before_item}}
-    {{#after_item}}
-    <small class="text-muted">#HELP_TEMPLATE#</small>
-    {{/after_item}}
+
+    {{#before_item}}{{/before_item}}
+    {{#after_item}}{{/after_item}}
 {{#after_label_and_item}}
 </div>
 {{/after_label_and_item}}
@@ -19,6 +17,4 @@
 {{#on_error_before_label}}{{/on_error_before_label}}
 {{#on_error_after_label}}{{/on_error_after_label}}
 {{#error_template}}{{/error_template}}
-{{#help_template}}
-#CURRENT_ITEM_HELP_TEXT#
-{{/help_template}}
+{{#help_template}}#CURRENT_ITEM_HELP_TEXT#{{/help_template}}
