--- a/apex/templates/Breadcrumbs/Standard.hbs
+++ b/apex/templates/Breadcrumbs/Standard.hbs
@@ -13,5 +13,4 @@
 </ol>
 {{/after_last}}
 
-{{#max_levels}}12{{/max_levels}}
-{{#start_with_node}}{{/start_with_node}}
+{{#max_levels}}{{/max_levels}}
