Added item container to modal page

--- a/apex/templates/Pages/Modal.hbs
+++ b/apex/templates/Pages/Modal.hbs
@@ -33,6 +33,9 @@
 {{#box}}
 #FORM_OPEN#
 
+<!-- Item Container -->
+#REGION_POSITION_01#
+
 <div class="modal #PAGE_CSS_CLASSES#">
     <div class="modal-content">
         #SUCCESS_MESSAGE#
