--- a/apex/templates/Pages/Standard.hbs
+++ b/apex/templates/Pages/Standard.hbs
@@ -33,23 +33,19 @@
 {{#box}}
 #FORM_OPEN#
 
-<!-- Item Container -->
-#REGION_POSITION_01#
-
-<!-- Header -->
-<nav class="navbar navbar-dark bg-inverse">
-    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
-    <div class="collapse navbar-toggleable-xs" id="collapsingNavbar">
-    <a class="navbar-brand" href="#HOME_LINK#">#LOGO#</a>
+<div class="ab-header">
+    <!-- Item Container -->
+    #REGION_POSITION_01#
+    
+    <a class="navbar-brand hidden-xs-up" href="#HOME_LINK#">#LOGO#</a>
     #NAVIGATION_BAR#
-  </div>
-</nav>
 
-#TOP_GLOBAL_NAVIGATION_LIST#
-#SIDE_GLOBAL_NAVIGATION_LIST#
+    #TOP_GLOBAL_NAVIGATION_LIST#
+    #SIDE_GLOBAL_NAVIGATION_LIST#
+</div>
 
 <!-- Main Content -->
-<div class="main-container">
+<div class="ab-main">
     <!-- Header -->
     #REGION_POSITION_02#
     <!-- Breadcrumbs -->
