Jumbotron enhancements. Cleaned other templates.
Fixes #20 , fixes #25

--- a/apex/templates/Pages/Standard.hbs
+++ b/apex/templates/Pages/Standard.hbs
@@ -36,7 +36,7 @@
 <div class="ab-header">
     <!-- Item Container -->
     #REGION_POSITION_01#
-    
+
     <a class="navbar-brand hidden-xs-up" href="#HOME_LINK#">#LOGO#</a>
     #NAVIGATION_BAR#
 
@@ -58,8 +58,8 @@
     #BODY#
 </div>
 
-<!-- Footer -->
-<footer class="ab-footer bg-faded m-t-3">
+<!-- Footer --><!-- Footer -->
+<footer class="ab-footer bg-faded">
     #REGION_POSITION_08#
 </footer>
 
