--- a/apex/templates/Regions/Alert.hbs
+++ b/apex/templates/Regions/Alert.hbs
@@ -4,14 +4,18 @@
     <strong>#TITLE#</strong>
     #BODY#
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
-        <div class="btn-group" role="group" aria-label="Button Group">#EDIT#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CREATE#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#COPY#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#DELETE#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div>
+
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div>
     </div>
 </div>
 {{/template}}
