--- a/apex/templates/Lists/Navbar.hbs
+++ b/apex/templates/Lists/Navbar.hbs
@@ -4,17 +4,23 @@
 {{#inline_css}}{{/inline_css}}
 
 {{#list_template_before_rows}}
-<nav id="#LIST_ID#" class="navbar navbar-dark bg-inverse #COMPONENT_CSS_CLASSES#" role="navigation">
+<nav id="#LIST_ID#" class="navbar #COMPONENT_CSS_CLASSES#" role="navigation">
     <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
     <div id="collapsingNavbar" class="collapse navbar-toggleable-xs">
         <ul class="nav navbar-nav">
 {{/list_template_before_rows}}
     {{#list_template_current}}
-    <li class="nav-item active"><a class="nav-link" href="#LINK#">#TEXT#<span class="sr-only">(current)</span></a></li>
+    <li class="nav-item active">
+        <a class="nav-link" href="#LINK#">
+            #TEXT# <span class="sr-only">(current)</span>
+        </a>
+    </li>
     {{/list_template_current}}
     {{#item_template_curr_w_child}}{{/item_template_curr_w_child}}
     {{#list_template_noncurrent}}
-    <li class="nav-item"><a class="nav-link" href="#LINK#">#TEXT#</a></li>
+    <li class="nav-item">
+        <a class="nav-link" href="#LINK#">#TEXT#</a>
+    </li>
     {{/list_template_noncurrent}}
     {{#item_template_noncurr_w_child}}{{/item_template_noncurr_w_child}}
     {{#between_items}}{{/between_items}}
