--- a/apex/templates/Regions/Card.hbs
+++ b/apex/templates/Regions/Card.hbs
@@ -2,16 +2,39 @@
 <div id="#REGION_STATIC_ID#" class="ab-region card #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
     <div class="card-block">
         <h4 class="card-title">#TITLE#</h4>
+
         <blockquote class="card-text">
             #BODY#
         </blockquote>
-        #EDIT# #CREATE# #CREATE2#
+
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div>
+        </div>
     </div>
-        #SUB_REGIONS#
-        #CLOSE# #COPY# #DELETE#
+
+    #SUB_REGIONS#
+
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
+        <div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div>
+    </div>
 </div>
 {{/template}}
 
 {{#sub_plug_header_template}}
-<div class="card-header">#SUB_REGION_HEADERS#</div>
+<div class="card-header">
+    #SUB_REGION_HEADERS#
+</div>
 {{/sub_plug_header_template}}
+{{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
+{{#sub_plug_template}}
+#SUB_REGION#
+{{/sub_plug_template}}
