--- a/apex/templates/Regions/Code.hbs
+++ b/apex/templates/Regions/Code.hbs
@@ -1,12 +1,11 @@
 {{#template}}
-<pre id="#REGION_STATIC_ID#" class="#REGION_CSS_CLASSES#"><code class="#REGION_CSS_CLASSES#">
-#BODY#
-</code></pre>
+<pre id="#REGION_STATIC_ID#" class="#REGION_CSS_CLASSES#">
+    <code class="#REGION_CSS_CLASSES#">
+        #BODY#
+    </code>
+</pre>
 {{/template}}
 
-{{#sub_plug_header_template}}
-{{/sub_plug_header_template}}
-{{#sub_plug_header_entry_template}}
-{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}
-{{/sub_plug_template}}
+{{#sub_plug_header_template}}{{/sub_plug_header_template}}
+{{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
+{{#sub_plug_template}}{{/sub_plug_template}}
