--- a/apex/templates/Regions/Standard.hbs
+++ b/apex/templates/Regions/Standard.hbs
@@ -1,20 +1,27 @@
 {{#template}}
 <div id="#REGION_STATIC_ID#" class="ab-region #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-    <div class="ab-region-title">#TITLE#</div>
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
-        <div class="btn-group" role="group" aria-label="Button Group">#EDIT#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CREATE#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
-    </div>
-    <div class="region-body">#BODY#</div>
-    #SUB_REGION_HEADERS#
-    #SUB_REGIONS#
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
-        <div class="btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#COPY#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#DELETE#</div>
-        <div class="btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
+    <div class="ab-region-container">
+        <div class="ab-region-title">#TITLE#</div>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div>
+        </div>
+        <div class="region-body">
+            #BODY#
+        </div>
+        #SUB_REGION_HEADERS#
+        #SUB_REGIONS#
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
+            <div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div>
+        </div>
     </div>
 </div>
 {{/template}}
