--- a/src/scss/_apex_jumbotron.scss
+++ b/src/scss/_apex_jumbotron.scss
@@ -1,17 +1,15 @@
-.jumbotron .ab-region-title {
-    margin-top: 0;
+// jumbotron fluid
+.jumbotron.jumbotron-fluid > .ab-region-container {
+    @include make-container();
+    @include make-container-max-widths();
 }
 
-// master-jumbotron
+// jumbotron master
 @include media-breakpoint-up(sm) {
     .jumbotron.master-jumbotron {
-        padding-bottom: 6rem;
-        padding-top: 10rem;
+        padding-top: 8rem!important;
+        padding-bottom: 6rem!important;
         margin-bottom: 0;
-
-        & .ab-region-title {
-            font-size: 3rem;
-        }
 
         & .region-body, & .region-body p {
             font-size: 1.5rem;
@@ -21,12 +19,8 @@
 
 @include media-breakpoint-up(md) {
     .jumbotron.master-jumbotron {
-        padding-bottom: 10rem;
-        padding-top: 15rem;
-
-        & .ab-region-title {
-            font-size: 5rem;
-        }
+        padding-top: 10rem!important;
+        padding-bottom: 8rem!important;
 
         & .region-body, & .region-body p {
             font-size: 2rem;
