--- a/src/scss/_apex_typography.scss
+++ b/src/scss/_apex_typography.scss
@@ -1,47 +1,50 @@
-.ab-h1>.ab-region-title, .ab-h1>.container>.ab-region-title {
+// Region titles
+.ab-h1 > .ab-region-container > .ab-region-title {
     @extend .h1;
 }
 
-.ab-h2>.ab-region-title, .ab-h2>.container>.ab-region-title {
+.ab-h2 > .ab-region-container > .ab-region-title {
     @extend .h2;
 }
 
-.ab-h3>.ab-region-title, .ab-h3>.container>.ab-region-title {
+.ab-h3 > .ab-region-container > .ab-region-title {
     @extend .h3;
 }
 
-.ab-h4>.ab-region-title, .ab-h4>.container>.ab-region-title {
+.ab-h4 > .ab-region-container > .ab-region-title {
     @extend .h4;
 }
 
-.ab-h5>.ab-region-title, .ab-h5>.container>.ab-region-title {
+.ab-h5 > .ab-region-container > .ab-region-title {
     @extend .h5;
 }
 
-.ab-h6>.ab-region-title, .ab-h6>.container>.ab-region-title {
+.ab-h6 > .ab-region-container > .ab-region-title {
     @extend .h6;
 }
 
-.ab-display-1>.ab-region-title, .ab-display-1>.container>.ab-region-title {
+.ab-display-1 > .ab-region-container > .ab-region-title {
     @extend .display-1;
 }
 
-.ab-display-2>.ab-region-title, .ab-display-2>.container>.ab-region-title {
+.ab-display-2 > .ab-region-container > .ab-region-title {
     @extend .display-2;
 }
 
-.ab-display-3>.ab-region-title, .ab-display-3>.container>.ab-region-title {
+.ab-display-3 > .ab-region-container > .ab-region-title {
     @extend .display-3;
 }
 
-.ab-display-4>.ab-region-title, .ab-display-4>.container>.ab-region-title {
+.ab-display-4 > .ab-region-container > .ab-region-title {
     @extend .display-4;
 }
 
+// Lead Text
 .region-lead p {
     @extend .lead;
 }
 
+// Blockquotes
 .blockquote.hide-blockquote-footer .blockquote-footer {
     @include hide();
 }
