--- a/apex/templates/Regions/Alert.hbs
+++ b/apex/templates/Regions/Alert.hbs
@@ -1,5 +1,5 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="alert #REGION_CSS_CLASSES#" role="alert" #REGION_ATTRIBUTES#>
+<div id="#REGION_STATIC_ID#" class="ab-region alert #REGION_CSS_CLASSES#" role="alert" #REGION_ATTRIBUTES#>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <strong>#TITLE#</strong>
     #BODY#
@@ -19,3 +19,7 @@
     </div>
 </div>
 {{/template}}
+
+{{#sub_plug_header_template}}{{/sub_plug_header_template}}
+{{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
+{{#sub_plug_template}}{{/sub_plug_template}}
