--- a/apex/templates/Regions/Card.hbs
+++ b/apex/templates/Regions/Card.hbs
@@ -17,6 +17,7 @@
         </div>
     </div>
 
+    #SUB_REGION_HEADERS#
     #SUB_REGIONS#
 
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
