--- a/src/scss/_apex_general.scss
+++ b/src/scss/_apex_general.scss
@@ -22,6 +22,10 @@ body.ab-container-fluid .ab-main>.container {
     }
 }
 
+.ab-blank {
+    display: inline-block;
+}
+
 // Pushpin
 .pin-top,
 .pin-bottom {
