--- a/src/scss/mixins/_apex_utilities.scss
+++ b/src/scss/mixins/_apex_utilities.scss
@@ -2,3 +2,8 @@
     display:none!important;
     visibility: hidden!important;
 }
+
+@mixin show() {
+    display:initial!important;
+    visibility: initial!important;
+}
