--- a/apex/templates/Fields/Image (Display image).hbs
+++ b/apex/templates/Fields/Image (Display image).hbs
@@ -7,10 +7,8 @@
     {{#after_label}}
     </label>
     {{/after_label}}
-    {{#before_item}}
-    {{/before_item}}
-    {{#after_item}}
-    {{/after_item}}
+    {{#before_item}}{{/before_item}}
+    {{#after_item}}{{/after_item}}
 {{#after_label_and_item}}
 <figcaption class="figure-caption">#CURRENT_ITEM_HELP_TEXT#</figcaption>
 </div>
