Revamped Input Addons.

--- a/apex/templates/Fields/Standard.hbs
+++ b/apex/templates/Fields/Standard.hbs
@@ -8,8 +8,12 @@
     </label>
     {{/after_label}}
 
-    {{#before_item}}{{/before_item}}
-    {{#after_item}}{{/after_item}}
+    {{#before_item}}
+    <div class="ab-input-group">
+    {{/before_item}}
+    {{#after_item}}
+    </div>
+    {{/after_item}}
 {{#after_label_and_item}}
 </div>
 {{/after_label_and_item}}
