--- a/apex/templates/Fields/Input add-on.hbs
+++ b/apex/templates/Fields/Input add-on.hbs
@@ -1,5 +1,5 @@
 {{#before_label_and_item}}
-<div class="form-group #ITEM_CSS_CLASSES#">
+<span class="input-group-addon">
 {{/before_label_and_item}}
     {{#before_label}}
     <label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#">
@@ -7,19 +7,13 @@
     {{#after_label}}
     </label>
     {{/after_label}}
-    {{#before_item}}
-    <div class="input-group">
-    {{/before_item}}
-    {{#after_item}}
-    </div>#HELP_TEMPLATE#
-    {{/after_item}}
+    {{#before_item}}{{/before_item}}
+    {{#after_item}}{{/after_item}}
 {{#after_label_and_item}}
-</div>
+</span>
 {{/after_label_and_item}}
 
 {{#on_error_before_label}}{{/on_error_before_label}}
 {{#on_error_after_label}}{{/on_error_after_label}}
 {{#error_template}}{{/error_template}}
-{{#help_template}}
-<small class="text-muted">#CURRENT_ITEM_HELP_TEXT#</small>
-{{/help_template}}
+{{#help_template}}{{/help_template}}
