--- a/src/scss/_apex_buttons.scss
+++ b/src/scss/_apex_buttons.scss
@@ -4,12 +4,12 @@
 }
 
 // Horizontal groups
-.ab-btn-group-horizontal > .btn-toolbar >.ab-btn-group {
+.ab-btn-group-horizontal > .ab-region-container > .btn-toolbar >.ab-btn-group {
     @extend .btn-group;
 }
 
 // Vertical groups
-.ab-btn-group-vertical > .btn-toolbar > .ab-btn-group {
+.ab-btn-group-vertical > .ab-region-container > .btn-toolbar > .ab-btn-group {
     @extend .btn-group-vertical;
 
     & > .btn {
