--- a/src/templates/Pages/Standard.hbs
+++ b/src/templates/Pages/Standard.hbs
@@ -42,7 +42,7 @@
 
     #TOP_GLOBAL_NAVIGATION_LIST#
     #SIDE_GLOBAL_NAVIGATION_LIST#
-    
+
     <!-- Header -->
     #REGION_POSITION_02#
 </div>
@@ -59,8 +59,8 @@
     #BODY#
 </div>
 
-<!-- Footer --><!-- Footer -->
-<footer class="ab-footer bg-faded">
+<!-- Footer -->
+<footer class="ab-footer bg-faded m-t-3">
     #REGION_POSITION_08#
 </footer>
 
