--- a/src/templates/Regions/Alert.hbs
+++ b/src/templates/Regions/Alert.hbs
@@ -2,7 +2,10 @@
 <div id="#REGION_STATIC_ID#" class="ab-region alert #REGION_CSS_CLASSES#" role="alert" #REGION_ATTRIBUTES#>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <strong>#TITLE#</strong>
+
     #BODY#
+    #SUB_REGIONS#
+
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
         <div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div>
         <div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
