--- a/src/templates/Regions/Blank.hbs
+++ b/src/templates/Regions/Blank.hbs
@@ -1,6 +1,7 @@
 {{#template}}
 <div id="#REGION_STATIC_ID#" class="ab-region ab-blank #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
     #BODY#
+    #SUB_REGIONS#
 </div>
 {{/template}}
 
