--- a/src/templates/Regions/Card.hbs
+++ b/src/templates/Regions/Card.hbs
@@ -36,6 +36,4 @@
 </div>
 {{/sub_plug_header_template}}
 {{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}
-#SUB_REGION#
-{{/sub_plug_template}}
+{{#sub_plug_template}}{{/sub_plug_template}}
