--- a/src/templates/Regions/Code.hbs
+++ b/src/templates/Regions/Code.hbs
@@ -2,7 +2,6 @@
 <pre id="#REGION_STATIC_ID#" class="ab-region #REGION_CSS_CLASSES#">
     <code class="#REGION_CSS_CLASSES#">
         #BODY#
-        #SUB_REGION_HEADERS#
         #SUB_REGIONS#
     </code>
 </pre>
@@ -10,6 +9,4 @@
 
 {{#sub_plug_header_template}}{{/sub_plug_header_template}}
 {{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}
-#SUB_REGION#
-{{/sub_plug_template}}
+{{#sub_plug_template}}{{/sub_plug_template}}
