--- a/src/templates/Regions/Standard.hbs
+++ b/src/templates/Regions/Standard.hbs
@@ -13,7 +13,6 @@
 
         <div class="region-body">
             #BODY#
-            #SUB_REGION_HEADERS#
             #SUB_REGIONS#
         </div>
 
@@ -30,4 +29,4 @@
 
 {{#sub_plug_header_template}}{{/sub_plug_header_template}}
 {{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}#SUB_REGION#{{/sub_plug_template}}
+{{#sub_plug_template}}{{/sub_plug_template}}
