--- a/src/scss/_apex.scss
+++ b/src/scss/_apex.scss
@@ -7,7 +7,7 @@
 @import "apex_images";
 @import "apex_footer";
 @import "apex_jumbotron";
-@import "apex_modal";
+@import "apex_modals";
 @import "apex_nav";
 @import "apex_tables";
 @import "apex_typography";
