--- a/src/scss/_apex_variables.scss
+++ b/src/scss/_apex_variables.scss
@@ -252,49 +252,49 @@ $gray-lightest:             #f7f7f9;
 
 /*
 {
-  "var" : "@brand-primary",
-  "name" : "brand-primary",
+  "var" : "@primary",
+  "name" : "primary",
   "type" : "color",
   "group": "General Colors"
 }
 */
-$brand-primary:             #0275d8;
+$primary:             #0275d8;
 /*
 {
-  "var" : "@brand-success",
-  "name" : "brand-success",
+  "var" : "@success",
+  "name" : "success",
   "type" : "color",
   "group": "General Colors"
 }
 */
-$brand-success:             #5cb85c;
+$success:             #5cb85c;
 /*
 {
-  "var" : "@brand-info",
-  "name" : "brand-info",
+  "var" : "@info",
+  "name" : "info",
   "type" : "color",
   "group": "General Colors"
 }
 */
-$brand-info:                #5bc0de;
+$info:                #5bc0de;
 /*
 {
-  "var" : "@brand-warning",
-  "name" : "brand-warning",
+  "var" : "@warning",
+  "name" : "warning",
   "type" : "color",
   "group": "General Colors"
 }
 */
-$brand-warning:             #f0ad4e;
+$warning:             #f0ad4e;
 /*
 {
-  "var" : "@brand-danger",
-  "name" : "brand-danger",
+  "var" : "@danger",
+  "name" : "danger",
   "type" : "color",
   "group": "General Colors"
 }
 */
-$brand-danger:              #d9534f;
+$danger:              #d9534f;
 
 //
 //
@@ -494,7 +494,7 @@ $body-color:                 $gray-dark;
   "group": "Link Colors"
 }
 */
-$link-color:                 $brand-primary;
+$link-color:                 $primary;
 $link-decoration:            none;
 /*
 {
@@ -1136,7 +1136,7 @@ $component-active-color: #fff;
   "group": "Borders"
 }
 */
-$component-active-bg:    $brand-primary;
+$component-active-bg:    $primary;
 
 $caret-width:            .3em;
 $caret-width-lg:         $caret-width;
@@ -1338,7 +1338,7 @@ $btn-primary-color:              #fff;
   "group": "Buttons"
 }
 */
-$btn-primary-bg:                 $brand-primary;
+$btn-primary-bg:                 $primary;
 /*
 {
   "var" : "@btn-primary-border",
@@ -1394,7 +1394,7 @@ $btn-info-color:                 #fff;
   "group": "Buttons"
 }
 */
-$btn-info-bg:                    $brand-info;
+$btn-info-bg:                    $info;
 /*
 {
   "var" : "@btn-info-border",
@@ -1422,7 +1422,7 @@ $btn-success-color:              #fff;
   "group": "Buttons"
 }
 */
-$btn-success-bg:                 $brand-success;
+$btn-success-bg:                 $success;
 /*
 {
   "var" : "@btn-success-border",
@@ -1450,7 +1450,7 @@ $btn-warning-color:              #fff;
   "group": "Buttons"
 }
 */
-$btn-warning-bg:                 $brand-warning;
+$btn-warning-bg:                 $warning;
 /*
 {
   "var" : "@btn-warning-border",
@@ -1478,7 +1478,7 @@ $btn-danger-color:               #fff;
   "group": "Buttons"
 }
 */
-$btn-danger-bg:                  $brand-danger;
+$btn-danger-bg:                  $danger;
 /*
 {
   "var" : "@btn-danger-border",
@@ -2609,7 +2609,7 @@ $pagination-active-color:              #fff;
   "group": "Pagination"
 }
 */
-$pagination-active-bg:                 $brand-primary;
+$pagination-active-bg:                 $primary;
 /*
 {
   "var" : "@pagination-active-border",
@@ -2618,7 +2618,7 @@ $pagination-active-bg:                 $brand-primary;
   "group": "Pagination"
 }
 */
-$pagination-active-border:             $brand-primary;
+$pagination-active-border:             $primary;
 
 /*
 {
@@ -3330,7 +3330,7 @@ $label-default-bg:            $gray-light;
   "group": "Labels"
 }
 */
-$label-primary-bg:            $brand-primary;
+$label-primary-bg:            $primary;
 /*
 {
   "var" : "@label-success-bg",
@@ -3339,7 +3339,7 @@ $label-primary-bg:            $brand-primary;
   "group": "Labels"
 }
 */
-$label-success-bg:            $brand-success;
+$label-success-bg:            $success;
 /*
 {
   "var" : "@label-info-bg",
@@ -3348,7 +3348,7 @@ $label-success-bg:            $brand-success;
   "group": "Labels"
 }
 */
-$label-info-bg:               $brand-info;
+$label-info-bg:               $info;
 /*
 {
   "var" : "@label-warning-bg",
@@ -3357,7 +3357,7 @@ $label-info-bg:               $brand-info;
   "group": "Labels"
 }
 */
-$label-warning-bg:            $brand-warning;
+$label-warning-bg:            $warning;
 /*
 {
   "var" : "@label-danger-bg",
@@ -3366,7 +3366,7 @@ $label-warning-bg:            $brand-warning;
   "group": "Labels"
 }
 */
-$label-danger-bg:             $brand-danger;
+$label-danger-bg:             $danger;
 
 /*
 {
@@ -3818,7 +3818,7 @@ $progress-border-radius:      $border-radius;
   "group": "Progress Bars"
 }
 */
-$progress-bar-bg:             $brand-primary;
+$progress-bar-bg:             $primary;
 /*
 {
   "var" : "@progress-bar-success-bg",
@@ -3827,7 +3827,7 @@ $progress-bar-bg:             $brand-primary;
   "group": "Progress Bars"
 }
 */
-$progress-bar-success-bg:     $brand-success;
+$progress-bar-success-bg:     $success;
 /*
 {
   "var" : "@progress-bar-warning-bg",
@@ -3836,7 +3836,7 @@ $progress-bar-success-bg:     $brand-success;
   "group": "Progress Bars"
 }
 */
-$progress-bar-warning-bg:     $brand-warning;
+$progress-bar-warning-bg:     $warning;
 /*
 {
   "var" : "@progress-bar-danger-bg",
@@ -3845,7 +3845,7 @@ $progress-bar-warning-bg:     $brand-warning;
   "group": "Progress Bars"
 }
 */
-$progress-bar-danger-bg:      $brand-danger;
+$progress-bar-danger-bg:      $danger;
 /*
 {
   "var" : "@progress-bar-info-bg",
@@ -3854,7 +3854,7 @@ $progress-bar-danger-bg:      $brand-danger;
   "group": "Progress Bars"
 }
 */
-$progress-bar-info-bg:        $brand-info;
+$progress-bar-info-bg:        $info;
 
 //
 //
